# py-dvr

./: .env.example  .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  alembic.ini  config.example.yaml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: c12de8346d77_initial_schema_with_stations_programs_.py  ce90ff79a07a_add_lineup_and_syncstatus_models_update_.py  fc82e4f344a3_add_episode_metadata_to_programs.py
app/: __init__.py  cli.py  config.py  database.py  db.py  main.py
app/models/: __init__.py  lineup.py  program.py  recording.py  schedule.py  station.py  sync_status.py
app/routes/: guide.py  lineups.py  recordings.py
app/schemas/: schedules_direct.py
app/services/: guide_sync.py  lineup_service.py  recorder.py  schedules_direct.py
app/templates/: base.html  guide.html  home.html  lineups.html  recordings.html  scheduled.html
pydvr/: __main__.py  cli.py  config.py  database.py  db.py  logging_config.py  main.py  paths.py
pydvr/models/: __init__.py  base.py  lineup.py  program.py  recording.py  schedule.py  station.py  sync_status.py
pydvr/routes/: __init__.py  guide.py  lineups.py  recordings.py
pydvr/schemas/: schedules_direct.py
pydvr/services/: __init__.py  guide_sync.py  hdhomerun.py  lineup_service.py  recorder.py  schedules_direct.py
pydvr/templates/: guide.html  home.html
specs/: data-model.md  plan.md  tasks-2.1-2.2-implementation-plan.md  tasks.md
specs/contracts/: README.md  common.md  guide.md  library.md  recordings.md  series.md  setup.md  system.md
tests/: __init__.py  test_config.py  test_database_setup.py  test_hdhomerun.py  test_schedules_direct.py
