[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyhdhrdvr"
version = "0.1.0"
description = "Web-based DVR management interface for HDHomeRun network TV tuner devices"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "PyDVR Contributors" }
]
keywords = ["dvr", "hdhomerun", "recording", "tv", "schedules-direct"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video :: Capture",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.2",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.1",
    "tenacity>=9.1.2",
    "click>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.4",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests that require real devices",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
